add uv, run first linting pass

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ Instr schedule is too wide
 Chan and instr schedule doesn't have running headers
 Add PDF metadata + bookmarks
 Add ToC with links
+Improve logging
